newsletter subscribe fixes

--- a/app/design/frontend/creo_mobile/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo_mobile/default/template/newsletter/subscribe.phtml
@@ -42,42 +42,66 @@ $check_cookie = Mage::getModel('core/cookie')->get('popup-shown');
 $visitAttempt = $_SERVER['HTTP_REFERER'];
 //if((Mage::getModel('core/cookie')->get('popup-shown')) && ($visitCount=='0') && ($subscriber->subscriber_email=='')) { ?>
 
+<?php /* ?>
 <div class="modal fade bs-example-modal-md modal_newsletter " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-md">
     <div class="modal-content block-subscribe">
       <button type="button" class="close closebtn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       <div class="modal-holder">
-        <!-- <h2><?php //echo $this->__('Newsletter') ?></h2>
-        <p>Subscribe to the Black & White mailing list to receive updates on new arrivals, special offers and other discount information.</p> -->
+        <h2><?php echo $this->__('Newsletter') ?></h2>
+        <p>Subscribe to the Black & White mailing list to receive updates on new arrivals, special offers and other discount information.</p>
         <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail" class="subscribe-form">
           <div class="block-content">
-          <?php /* ?>
             <div class="input-box">
               <input required="required" type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email email"  />
             </div>
             <div class="actions">
               <button type="submit" title="<?php echo $this->__('Subscribe') ?>" class="button newslettersubscribe "><span><span><?php echo $this->__('Subscribe') ?></span></span></button>
             </div>
-            <?php */ ?>
-            <div class="row dontshowagain" onclick="checkcookie()">
+            <div class="dontshowagain" onclick="checkcookie()">
               <input type="checkbox" value="" name="checkbox1" id="checkbox1">
               <label for="checkbox1">Don’t show this popup again</label>
             </div>
           </div>
         </form>
-        <script type="text/javascript">
+<?php */ ?>
+
+<div class="modal fade bs-example-modal-md modal_newsletter " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-md">
+    <div class="modal-content block-subscribe normal-modal">
+      <div class="modal-body">
+        <img src="<?php echo $this->getSkinUrl('/images/get-hooked-up-text.png') ?>" title="Get Hooked Up" alt="Get Hooked Up" style="max-width:100%;">
+        <p class="big">Subscribe  and  get <big>20%</big>  OFF  on  your  first  purchase</p>
+        <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail" class="subscribe-form">
+          <div class="block-content">
+            <div class="input-box">
+              <input required="required" type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" placeholder="Email " class="input-text required-entry validate-email email"  />
+            </div>
+            <div class="actions">
+              <button type="submit" title="<?php echo $this->__('GET MY 20% OFF NOW') ?>" class="button newslettersubscribe off"><span><span><?php echo $this->__('GET MY 20% OFF NOW') ?></span></span></button>
+            </div>
+            <div class="dontshowagain" onclick="checkcookie()">
+              <input type="checkbox" value="" name="checkbox1" id="checkbox1">
+              <label for="checkbox1">Don’t show this popup again</label>
+            </div>
+          </div>
+        </form>
+    <script type="text/javascript">
     //<![CDATA[
         var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail');
     //]]>
     </script>
- <div class="christmas">
+<?php /* ?>
+    <div class="christmas">
     <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('christmas')->toHtml(); ?>
-</div>
-<style type="text/css" media="screen">
-  .christmas{padding:15px 15px 40px;}
-  .christmas img{max-width:100%;}
-</style>
+    </div>
+    <style type="text/css" media="screen">
+    .christmas{padding:15px 15px 40px;}
+    .christmas img{max-width:100%;}
+    </style>
+    <?php */ ?>
       </div>
+    <button type="button" class="close closebtn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">SKIP</span></button>
     </div>
   </div>
 </div>
@@ -87,15 +111,14 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
 
 
 <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail1" class="subscribe-form footer-form">
-		  <!--<span class="title">Join us for 20% off your first order</span>-->
+      <!--<span class="title">Join us for 20% off your first order</span>-->
           <div class="form-row">
           <div class="footer_newsletter">
             <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email email" placeholder="<?php echo $this->__('Email Address') ?>" />
             </div>
             <input type="submit" value="JOIN" class="button newslettersubscribe ">
           </div>
-          
-          
+
         </form>
         <script type="text/javascript">
     //<![CDATA[
@@ -104,9 +127,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
     function checkcookie(){
        //jQuery(".modal-backdrop").fadeOut().removeClass("active");
        // jQuery(".modal_newsletter ").fadeOut().removeClass("active");
-	   jQuery('.modal_newsletter').modal('hide');
+     jQuery('.modal_newsletter').modal('hide');
         <?php Mage::getModel('core/cookie')->set('popup-shown', 'true', 1 * 365 * 24 * 60 * 60 , '/'); ?>
     }
     </script>
-
-
