custom options changes

--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -52,7 +52,7 @@ $_swatches_height = (int) $_settings['swatch_height'];
                                                 $_image = $this->helper('catalog/image')->init($_image_product, 'image');
                                             }
                                             ?>
-                                            <a <?php if($_attribute["id"]==162){?> onclick="changeCustomOptionImages1(<?php echo $_option["id"] ?>)" <?php } ?> class="" style="width:<?php echo $_swatches_width ?>px; height:<?php echo $_swatches_height; ?>px;" title="<?php echo $_option["label"] ?>" data-original-title="<?php echo $_option["label"] ?>"  rel="<?php echo $_option["id"] ?>" id="swatches_option_value_<?php echo $_option["id"] ?>" href="<?php //echo $_image; ?>" rev="<?php //echo $_image->resize(256); ?>" >
+                                            <a <?php if($_attribute["id"]==162){?> onclick="changeCustomOptionImages(<?php echo $_option["id"] ?>)" <?php } ?> class="" style="width:<?php echo $_swatches_width ?>px; height:<?php echo $_swatches_height; ?>px;" title="<?php echo $_option["label"] ?>" data-original-title="<?php echo $_option["label"] ?>"  rel="<?php echo $_option["id"] ?>" id="swatches_option_value_<?php echo $_option["id"] ?>" href="<?php //echo $_image; ?>" rev="<?php //echo $_image->resize(256); ?>" >
                                                 <?php
                                                 echo "<img src='" . $_image->resize($_swatches_width, $_swatches_height) . "' title='" . $_option["label"] . "' alt='" . $_option["label"] . "'/>";
                                                 ?>
@@ -62,7 +62,7 @@ $_swatches_height = (int) $_settings['swatch_height'];
                                             break;
                                         case 'image':
                                             ?>
-                                            <a <?php if($_attribute["id"]==162){?> onclick="changeCustomOptionImages2(<?php echo $_option["id"] ?>)" <?php } ?> class="" style=" <?php echo $_option['swatch_value'] ?>; width:<?php echo $_swatches_width ?>px; height:<?php echo $_swatches_height; ?>px;" data-original-title="<?php echo $_option["label"] ?>"  title="<?php echo $_option["label"] ?>" rel="<?php echo $_option["id"] ?>" id="swatches_option_value_<?php echo $_option["id"] ?>" href="#" rev="">
+                                            <a class="" style=" <?php echo $_option['swatch_value'] ?>; width:<?php echo $_swatches_width ?>px; height:<?php echo $_swatches_height; ?>px;" data-original-title="<?php echo $_option["label"] ?>"  title="<?php echo $_option["label"] ?>" rel="<?php echo $_option["id"] ?>" id="swatches_option_value_<?php echo $_option["id"] ?>" href="#" rev="">
                                                 <span><?php echo $_option["label"] ?></span>
                                             </a>
                                             <span class="tooltip-container"><span class="tooltip"><span><?php echo $_option["label"] ?></span></span></span>
@@ -70,7 +70,7 @@ $_swatches_height = (int) $_settings['swatch_height'];
                                             break;
                                         case 'label':
                                             ?>
-                                            <a <?php if($_attribute["id"]==162){?> onclick="changeCustomOptionImages3(<?php echo $_option["id"] ?>)" <?php } ?> class="swatch-label" title="<?php echo $_option["label"] ?>" data-original-title="<?php echo $_option["label"] ?>"   rel="<?php echo $_option["id"] ?>" id="swatches_option_value_<?php echo $_option["id"] ?>" href="#">
+                                            <a class="swatch-label" title="<?php echo $_option["label"] ?>" data-original-title="<?php echo $_option["label"] ?>"   rel="<?php echo $_option["id"] ?>" id="swatches_option_value_<?php echo $_option["id"] ?>" href="#">
                                                 <?php echo $_option["label"] ?>
                                             </a>
                                             <?php
