--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -4,10 +4,9 @@
 <default>
 
 <reference name="head">
-
  <action method="addCss"><stylesheet>jquery.mCustomScrollbar.css</stylesheet></action>
-  <action method="setText"><text><![CDATA[<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">]]></text></action>
   <action method="addItem"><type>skin_js</type><script>js/jquery.main.js</script></action>
+  <action method="addItem"><type>skin_js</type><script>js/jquery.custom.js</script></action>
   <action method="addItem"><type>skin_js</type><script>js/jquery.mCustomScrollbar.js</script></action>
 	<action method="addItem"><type>skin_js</type><script>bootstrap/js/bootstrap.min.js</script></action>
    <action method="addCss"><stylesheet>bootstrap/css/bootstrap.css</stylesheet></action> 
@@ -22,7 +21,6 @@
    
     <action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.ext.js</script></action>
 	<action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.js</script></action>
-	
 </reference>
 
 
@@ -58,6 +56,31 @@
 	<action method="addCss"><stylesheet>css/auguria/sliders/default.css</stylesheet></action>
 	<!--<action method="addJs"><script>auguria/sliders/jquery-1.7.2.min.js</script></action>-->
 	<action method="addItem"><type>skin_js</type><script>js/auguria/sliders/slides.min.jquery_forked.js</script></action>
+		<block type="core/text" name="simple_example_javascript_block"> 
+		<action method="setText">
+		<text><![CDATA[
+		<script type="application/ld+json">{
+		"@context": "http://schema.org",
+		"@type": "Organization",
+		"name": "CREO",
+		"url": "https://creoroom.com",
+		"logo": "https://creoroom.com/skin/frontend/creo/default/images/logo.png",
+		"sameAs" : [
+		"https://www.facebook.com/CREOROOM",
+		"https://twitter.com/creo_room/",
+		"https://instagram.com/creo_room/",
+		"https://www.pinterest.com/creo_room/"
+		],
+		"contactPoint" : [{
+		"@type" : "ContactPoint",
+		"telephone" : "+97143310717",
+		"contactType" : "customer service"
+		}]
+		}
+		</script>
+		//]]></text>
+		</action>
+		</block>
 	</reference>
 	
 	<reference name="content">
