--- a/app/design/frontend/base/default/template/mst_searchautocomplete/amazon.phtml
+++ b/app/design/frontend/base/default/template/mst_searchautocomplete/amazon.phtml
@@ -1,22 +1,22 @@
 <?php
-$_helper           =  Mage::helper('catalogsearch');
-$_value            = $_helper->getEscapedQueryText();
-$_currentCategory  = Mage::getSingleton('core/app')->getRequest()->getParam('cat');
+$_helper =  Mage::helper('catalogsearch');
+$_value = $_helper->getEscapedQueryText();
+$_currentCategory = Mage::getSingleton('core/app')->getRequest()->getParam('cat');
 $_currentAttribute = Mage::getSingleton('core/app')->getRequest()->getParam('attr');
-$_filterType       = $this->getFilterType();
-$_url              = $this->getAjaxUrl();
+$_filterType = $this->getFilterType();
+$_url = $this->getAjaxUrl();
 ?>
-<form class="searchautocomplete UI-SEARCHAUTOCOMPLETE" action="<?php echo $this->helper('catalogsearch')->getResultUrl() ?>" method="get"
+<form class="searchautocomplete UI-SEARCHAUTOCOMPLETE search-form" action="<?php echo $this->helper('catalogsearch')->getResultUrl() ?>" method="get"
     data-tip="<?php echo $this->__(Mage::getStoreConfig('searchautocomplete/general/tip')) ?>"
     data-url="<?php echo $_url ?>"
     data-minchars="<?php echo Mage::getStoreConfig('searchautocomplete/general/min_chars') ?>"
     data-delay="<?php echo Mage::getStoreConfig('searchautocomplete/general/delay') ?>">
 
-    <label for="search"><?php echo $this->__('Search') ?></label>
+    <!-- <label for="search"><?php //echo $this->__('Search') ?></label> -->
     <div class="nav">
 
         <?php if ($_filterType == 'category'): ?>
-        <div class="nav-search-in">
+        <div class="nav-search-in" style="display:none;">
             <span class="category-fake UI-CATEGORY-TEXT"><?php echo $this->__('All') ?></span>
             <span class="nav-down-arrow"></span>
             <select name="cat" class="category UI-CATEGORY">
@@ -29,7 +29,7 @@ $_url              = $this->getAjaxUrl();
             </select>
         </div>
         <?php elseif ($_filterType == 'attribute'): ?>
-            <div class="nav-search-in">
+            <div class="nav-search-in" style="display:none;">
                 <span class="category-fake UI-CATEGORY-TEXT"><?php echo $this->__('All') ?></span>
                 <span class="nav-down-arrow"></span>
                 <select name="attr" class="category UI-CATEGORY">
@@ -45,6 +45,7 @@ $_url              = $this->getAjaxUrl();
 
         <div class="nav-input UI-NAV-INPUT">
             <input class="input-text UI-SEARCH" type="text" autocomplete="off" name="<?php echo $_helper->getQueryParamName() ?>" value="<?php echo $_helper->getEscapedQueryText() ?>" maxlength="<?php echo $_helper->getMaxQueryLength() ?>" />
+            <button type="submit" title="<?php echo $this->__('Go') ?>" class="button searchBtn"><?php //echo $this->__('Go') ?></button>
         </div>
 
         <div class="searchautocomplete-loader UI-LOADER">
@@ -58,8 +59,8 @@ $_url              = $this->getAjaxUrl();
             <div id="g08"></div>
         </div>
     </div>
-    <div class="nav-submit-button">
-        <button type="submit" title="<?php echo $this->__('Go') ?>" class="button"><?php echo $this->__('Go') ?></button>
-    </div>
+    <!-- <div class="nav-submit-button">
+        <button type="submit" title="<?php //echo $this->__('Go') ?>" class="button searchBtn"><?php //echo $this->__('Go') ?></button>
+    </div> -->
     <div style="display:none" class="searchautocomplete-placeholder UI-PLACEHOLDER"></div>
 </form>
