--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -107,17 +107,17 @@ background: #f16167;
 border-color: #f16167;
 }
 .search-form .searchBtn {
-background: rgba(0, 0, 0, 0) url("images/productpage/search.png") no-repeat scroll 0 0 !important;
+background: rgba(0, 0, 0, 0) url("images/productpage/search.png") no-repeat center;
 border: medium none;
-float: left;
+display: block;
 font-size: 0;
-height: 11px;
+height:20px;
 line-height: 0;
 margin: 0;
-padding: 0;
-width: 19px;
+padding:5px;
+width:20px;
 position: absolute;
-left: 5px;
+left:0px;
 }
 .subtotal .price {
 color: #000 !important;
