email template header and table fix

--- a/app/locale/en_US/template/email/html/header.html
+++ b/app/locale/en_US/template/email/html/header.html
@@ -56,3 +56,7 @@ table{
 </style>
 </head>
 <body>
+<table width="100%" cellpadding="0" cellspacing="0" border="0" style="width:100%;min-width:650px;">
+         <tr class="header">
+<td colspan="3" bgcolor="#f16b7a" align="center"  style="width:100%;padding:20px 5px;background:#f16b7a;">
+<img style="max-width:130px;" src="http://localmediauae.com/dev//creo-emailer/table-baesd/Creo-Emailer/images/logo.png">
