--- a/app/design/frontend/creo/default/template/email/order/items.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items.phtml
@@ -35,8 +35,8 @@
             <table class="items" cellpadding="0" cellspacing="0" border="0" style="width:100%;">
             <thead>
                 <tr>
-                <td style="min-width:60%; overflow: hidden; padding:0px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;padding:4px 10px;"><span style='display: block; ' >Product Description</span></a></td>
-                <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;padding:4px 10px;"> <span style='display: block;'>Quantity</span></a></td>
+                <td style="min-width:60%; overflow: hidden; padding:0px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;padding:4px 10px;"><span style='display: block; ' >Description</span></a></td>
+                <td style="min-width: 20%; overflow: hidden; padding:0px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;padding:4px 10px;"> <span style='display: block;'>Qty</span></a></td>
                 <td style="min-width: 20%; overflow: hidden; padding:0px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;padding:4px 10px;"><span style='display: block;' >Price</span></a></td>
                 </tr>
 	        </thead>
