creo mobile popup done

--- a/app/design/frontend/creo_mobile/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo_mobile/default/template/newsletter/subscribe.phtml
@@ -67,7 +67,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
 <?php */ ?>
 
 <div class="modal fade bs-example-modal-md modal_newsletter " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-md">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content block-subscribe normal-modal">
       <div class="modal-body">
         <img src="<?php echo $this->getSkinUrl('/images/get-hooked-up-text.png') ?>" title="Get Hooked Up" alt="Get Hooked Up" style="max-width:100%;">
@@ -107,8 +107,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
 </div>
 
 <?php //} ?>
-
-
+<?php /* ?>
 
 <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail1" class="subscribe-form footer-form">
       <!--<span class="title">Join us for 20% off your first order</span>-->
@@ -120,6 +119,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
           </div>
 
         </form>
+<?php */ ?>
         <script type="text/javascript">
     //<![CDATA[
         var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail1');
