--- a/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/footer.phtml
@@ -27,6 +27,8 @@
 <footer id="footer" class="clearfix">
 <div class="row">
 <div class="col-xs-12">
+<?php // footer newsletter popup
+echo $this->getChildHtml() ?>
 	<!-- <div class="right-area">
              <?php // echo $this->getChildHtml('newsletter'); ?>
                             <?php //echo $this->getChildHtml() ?>
