--- a/app/locale/en_US/template/email/account_password_reset_confirmation.html
+++ b/app/locale/en_US/template/email/account_password_reset_confirmation.html
@@ -12,23 +12,19 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td class="action-content">
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
             <h1>{{htmlescape var=$customer.name}},</h1>
             <p>There was recently a request to change the password for your account.</p>
             <p>If you requested this password change, please reset your password here:</p>
-            <table cellspacing="0" cellpadding="0" class="action-button" >
-                <tr>
-                    <td>
+
+                    <p>
                         <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}"><span>Reset Password</span></a>
-                    </td>
-                </tr>
-            </table>
+                    </p>
             <p>If you did not make this request, you can ignore this message and your password will remain the same.</p>
         </td>
-    </tr>
-</table>
-
+</tr>
 {{template config_path="design/email/footer"}}
