--- a/app/locale/en_US/template/email/newsletter_subscr_success.html
+++ b/app/locale/en_US/template/email/newsletter_subscr_success.html
@@ -3,33 +3,11 @@
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
 <!-- Begin wrapper table -->
-<table width="100%" cellpadding="0" cellspacing="0" border="0" id="background-table">
-    <tr>
-        <td valign="top" class="container-td" align="center">
-            <table cellpadding="0" cellspacing="0" border="0" align="center" class="container-table">
-            </table>
-                    </td>
-                </tr>
-                <tr>
-                    <td valign="top" class="top-content">
-                    <!-- Begin Content -->
-<table style="width:800px; margin:0 auto ; border-spacing: 0;">
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
 <tr>
 <td colspan="3">
-  <table width="100%" bgcolor="#f16b7a" cellpadding="0" cellspacing="0" border="0" style="width:100%; background:#f16b7a;">
-    <tr class="header">
-         <td align="center"  style="width:100%;padding:20px 0 10px;">
-         <img style="max-width:130px;" src="http://creoroom.com/skin/frontend/creo/default/images/logo02.png">
-         </td>
-    </tr>
-  </table>
- </td>
- </tr>
-<tr>
-<td colspan="3">
-  <table width="100%">
-         <tr class="section1">
-         <td>
                <h1 style="font-weight: normal;font-size:22px;">YOU GOT CREO...</h1>
                <p style="font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;">Hi</p>
                <p  style=" font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;">Thank you for subscribing with creoroom.com. Here is your 20% off coupon code</p>
@@ -38,9 +16,6 @@
                </p>
                <h3 style="text-transform: uppercase; font-family: 'Roboto Condensed', sans-serif; color: rgb(241, 107, 122); font-size: 14px; margin-bottom: 0;">-be you-</h3>
                <p class="creo-room" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 14px;font-weight: normal;margin: 0;padding: 0;line-height: 30px; font-size: 14px; text-transform: capitalize; color: rgb(0, 0, 0);margin-bottom: 40px;"> creo room</p>
-         </td>
-         </tr>
- </table>
- </td>
+         </td>        
  </tr>
 {{template config_path="design/email/footer"}}
