--- a/app/locale/en_US/template/email/payment_failed.html
+++ b/app/locale/en_US/template/email/payment_failed.html
@@ -12,13 +12,12 @@
 "var paymentMethod":"Payment Method",
 "var dateAndTime":"Date and Time of Transaction"}
 @-->
-
-<table>
-    <thead>
-    <tr>
-        <th>Payment transaction failed.</th>
-    </tr>
-    </thead>
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">Payment transaction failed.</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
+<table width="100%">
     <tbody>
     <tr>
         <td>
@@ -66,3 +65,5 @@
     </tr>
     </tbody>
 </table>
+</td>
+</tr>
