--- a/app/locale/en_US/template/email/account_new_confirmation.html
+++ b/app/locale/en_US/template/email/account_new_confirmation.html
@@ -12,16 +12,13 @@
 
 <!--@styles
 @-->
-
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td class="action-content">
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
                         <h1>{{htmlescape var=$customer.name}},</h1>
                         <p>Your email {{var customer.email}} must be confirmed before using it to log in to our store.</p>
                         <p class="highlighted-text">
@@ -30,23 +27,15 @@
                             <strong>Password:</strong> {{htmlescape var=$customer.password}}
                         </p>
                         <p>Click here to confirm your email and instantly log in (the link is valid only once):</p>
-                        <table cellspacing="0" cellpadding="0" class="action-button" >
-                            <tr>
-                                <td>
+
+                                <p>
                                     <a href="{{store url="customer/account/confirm/" _query_id=$customer.id _query_key=$customer.confirmation _query_back_url=$back_url}}"><span>Confirm Account</span></a>
-                                </td>
-                            </tr>
-                        </table>
+                                </p>
                         <p>
                             If you have any questions, please feel free to contact us at
                             <a href="mailto:{{var store_email}}">{{var store_email}}</a>
                             {{depend store_phone}} or by phone at <a href="tel:{{var phone}}">{{var store_phone}}</a>{{/depend}}.
                         </p>
-                    </td>
-                </tr>
-            </table>
         </td>
     </tr>
-</table>
-
 {{template config_path="design/email/footer"}}
