--- a/app/locale/en_US/template/email/newsletter_subscr_confirm.html
+++ b/app/locale/en_US/template/email/newsletter_subscr_confirm.html
@@ -12,20 +12,12 @@
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
 
-<table cellpadding="0" cellspacing="0" border="0">
+</tr>
     <tr>
-        <td class="action-content">
+        <td colspan="3" class="action-content">
             <h1>Thank you for subscribing.</h1>
             <p>To begin receiving the newsletter, you must first confirm your subscription:</p>
-            <table cellspacing="0" cellpadding="0" class="action-button" >
-                <tr>
-                    <td>
-                        <a href="{{var subscriber.getConfirmationLink()}}"><span>Confirm Subscription</span></a>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-
+           <a href="{{var subscriber.getConfirmationLink()}}"><span>Confirm Subscription</span></a>
+           </td>
+</tr>         
 {{template config_path="design/email/footer"}}
