--- a/app/locale/en_US/template/email/newsletter_unsub_success.html
+++ b/app/locale/en_US/template/email/newsletter_unsub_success.html
@@ -2,13 +2,12 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td class="action-content">
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
             <h1>You have been unsubscribed from the newsletter.</h1>
         </td>
     </tr>
-</table>
-
 {{template config_path="design/email/footer"}}
