--- a/app/locale/en_US/template/email/product_alert_cron_error.html
+++ b/app/locale/en_US/template/email/product_alert_cron_error.html
@@ -2,6 +2,13 @@
 <!--@vars
 {"var warnings":"Warnings"}
 @-->
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO </h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
 Product alerts cron warnings:
 
 {{var warnings}}
+</td>
+</tr>
