--- a/app/locale/en_US/template/email/product_share.html
+++ b/app/locale/en_US/template/email/product_share.html
@@ -12,19 +12,14 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td class="action-content">
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO </h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
             <h1>{{htmlescape var=$name}},</h1>
             <p>Your friend wants to share this product with you: <a href="{{var product_url}}">{{var product_name}}</a></p>
-            <table cellspacing="0" cellpadding="0" class="message-container">
-                <tr>
-                    <td><strong>Message:</strong> {{var message}}</td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-
+           <p><strong>Message:</strong> {{var message}}</p>
+</td>
+</tr>
 {{template config_path="design/email/footer"}}
