--- a/app/locale/en_US/template/email/wishlist_share.html
+++ b/app/locale/en_US/template/email/wishlist_share.html
@@ -11,29 +11,18 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td class="action-content">
-                        <h1>Hey, take a look at my wishlist from {{var store.getFrontendName()}}.</h1>
-                        <table cellspacing="0" cellpadding="0" class="message-container">
-                            <tr>
-                                <td>{{var message}}</td>
-                            </tr>
-                        </table>
-                        {{var items}}
-                        {{depend salable}}
-                        <p><strong><a href="{{var addAllLink}}">Add all items to shopping cart</a></strong> |
-                        {{/depend}}
-                        <strong><a href="{{var viewOnSiteLink}}">View all wishlist items</a></strong></p>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO </h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
+    <h1>Hey, take a look at my wishlist from {{var store.getFrontendName()}}.</h1>
+    <p>{{var message}}</p>
+    <p>{{var items}}<br>
+    {{depend salable}}</p>
+    <p><strong><a href="{{var addAllLink}}">Add all items to shopping cart</a></strong> |
+    {{/depend}}
+    <strong><a href="{{var viewOnSiteLink}}">View all wishlist items</a></strong></p>
+</td>
+</tr>           
 {{template config_path="design/email/footer"}}
