email templates all fixed

--- a/app/locale/en_US/template/email/sales/shipment_new.html
+++ b/app/locale/en_US/template/email/sales/shipment_new.html
@@ -21,7 +21,11 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
 <table cellpadding="0" cellspacing="0" border="0">
     <tr>
         <td>
@@ -96,5 +100,6 @@
         </td>
     </tr>
 </table>
-
+</td>
+</tr>
 {{template config_path="design/email/footer"}}
