--- a/app/locale/en_US/template/email/sales/order_update.html
+++ b/app/locale/en_US/template/email/sales/order_update.html
@@ -15,33 +15,22 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td class="action-content">
-                        <h1>{{htmlescape var=$order.getCustomerName()}},</h1>
-                        <p>Your order <span class="no-link">#{{var order.increment_id}}</span> has been updated to: <strong>{{var order.getStatusLabel()}}</strong></p>
-                        {{if comment}}
-                        <table cellspacing="0" cellpadding="0" class="message-container">
-                            <tr>
-                                <td>{{var comment}}</td>
-                            </tr>
-                        </table>
-                        {{/if}}
-                        <p>You can check the status of your order by <a href="{{store url="customer/account/"}}">logging into your account</a>.</p>
-                        <p>
-                            If you have any questions, please feel free to contact us at
-                            <a href="mailto:{{var store_email}}">{{var store_email}}</a>
-                            {{depend store_phone}} or by phone at <a href="tel:{{var phone}}">{{var store_phone}}</a>{{/depend}}.
-                        </p>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
+<h1>{{htmlescape var=$order.getCustomerName()}},</h1>
+<p>Your order <span class="no-link">#{{var order.increment_id}}</span> has been updated to: <strong>{{var order.getStatusLabel()}}</strong></p>
+{{if comment}}
+        <p>{{var comment}}</p>
+{{/if}}
+<p>You can check the status of your order by <a href="{{store url="customer/account/"}}">logging into your account</a>.</p>
+<p>
+    If you have any questions, please feel free to contact us at
+    <a href="mailto:{{var store_email}}">{{var store_email}}</a>
+    {{depend store_phone}} or by phone at <a href="tel:{{var phone}}">{{var store_phone}}</a>{{/depend}}.
+</p>
+</td>
+</tr>
 {{template config_path="design/email/footer"}}
