--- a/app/locale/en_US/template/email/sales/shipment_new_guest.html
+++ b/app/locale/en_US/template/email/sales/shipment_new_guest.html
@@ -20,15 +20,13 @@
 
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
-
-<table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-        <td>
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td class="email-heading">
+<h1 style="font-size: 18px; font-weight: 700; font-family: 'Roboto Condensed', sans-serif; color: #fff;">CREO</h1>
+</td><!-- header End -->
+</tr>
+<tr>
+<td colspan="3">
                         <h1>Thank you for your order from {{var store.getFrontendName()}}.</h1>
-                        <p>You can check the status of your order by <a href="{{store url="customer/account/"}}"">logging into your account</a>.</p>
+                        <p>You can check the status of your order by <a href="{{store url="customer/account/"}}">logging into your account</a>.</p>
                     </td>
                     <td class="store-info">
                         <h4>Order Questions?</h4>
@@ -44,28 +42,13 @@
                             <b>Email:</b> <a href="mailto:{{var store_email}}">{{var store_email}}</a>
                             {{/depend}}
                         </p>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-    <tr>
-        <td class="order-details">
             <h3>Your Shipment <span class="no-link">#{{var shipment.increment_id}}</span></h3>
             <p>Order <span class="no-link">#{{var order.increment_id}}</span></p>
-        </td>
-    </tr>
-    <tr class="order-information">
-        <td>
             {{if comment}}
-            <table cellspacing="0" cellpadding="0" class="message-container">
-                <tr>
-                    <td>{{var comment}}</td>
-                </tr>
-            </table>
+                    <p>{{var comment}}</p>
             {{/if}}
             {{layout handle="sales_email_order_shipment_items" shipment=$shipment order=$order}}
-            <table cellpadding="0" cellspacing="0" border="0">
+            <table width="100%" cellpadding="0" cellspacing="0" border="0">
                 <tr>
                     <td class="address-details">
                         <h6>Bill to:</h6>
@@ -94,6 +77,4 @@
             {{block type='core/template' area='frontend' template='email/order/shipment/track.phtml' shipment=$shipment order=$order}}
         </td>
     </tr>
-</table>
-
 {{template config_path="design/email/footer"}}
