--- a/app/design/frontend/creo/default/template/recentproducts/recentproducts.phtml
+++ b/app/design/frontend/creo/default/template/recentproducts/recentproducts.phtml
@@ -8,20 +8,46 @@ $productMediaConfig = Mage::getModel('catalog/product_media_config');
 
 ?>
   
-<div id="product_list">
-  <h1>Recent Products</h1>
+<tr style="width:100%;">
+<td class="three-column test">
   <?php if (is_array($products) && count($products)) { ?>
-    <?php foreach($products as $product) { 
+    <?php 
+    $i=0;
+    foreach($products as $product) { 
             $thumbnailUrl  = $productMediaConfig->getMediaUrl($product['thumb']);
+            $i++;
         ?>
-      <div>
-        <a href="<?php echo $product['url'] ?>"><?php echo $product['name'] ?></a>
-        <br>
-        <a href="<?php echo $product['url'] ?>"><img src="<?php echo $thumbnailUrl;?>" width="225" height="325" border="0"/></a>
-
 
         
-              </div>
+                            
+                                <table class="btn-newsletter" cellpadding="0" cellspacing="0" border="0" style=" width: 33%; display: inline-block; vertical-align: top; ">
+                                    <tr>
+                                        <td>
+                                            <a href="<?php echo $product['url'] ?>" style="text-decoration:none;outline:none;"><img style="max-width:100%;width:100%;" src="<?php echo $thumbnailUrl;?>" width="261" height="303">
+                                                <h5 style='background-color: #000000;
+                                                    color: #ffffff;
+                                                    font-family: "Roboto Condensed",sans-serif;
+                                                    font-size: 23px;
+                                                    font-weight: bold;
+                                                    margin-top: 0;
+                                                    padding-bottom: 5px;
+                                                    padding-top: 5px;
+                                                    text-align: center;
+                                                    text-decoration: none;
+                                                    text-transform: uppercase;
+                                                    width: 100%;'><?php echo $product['name'] ?></h5>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
+                               
+                            
+                            <?php
+                                if($i%3==0){
+                                    echo '</td></tr><tr style="width:100%;"><td class="three-column test">';
+                                }
+                            ?>
+                        
     <?php } ?>
   <?php } ?>
-</div>
+</tr>
