--- a/app/design/frontend/creo/default/template/recentproducts/recentproducts.phtml
+++ b/app/design/frontend/creo/default/template/recentproducts/recentproducts.phtml
@@ -7,7 +7,42 @@ $products = $this->getRecentProducts($cat_to_select,$pcount);
 $productMediaConfig = Mage::getModel('catalog/product_media_config');
 
 ?>
-  
+
+<table style="width: 800px; margin: 0 auto; border-spacing: 0;">
+<tbody>
+<tr>
+<td>
+<table style="width: 100%; background: #ffffff; padding-top: 20px;" border="0">
+<tbody>
+<tr class="header">
+<td style="width: 100%;"><a href="https://creoroom.com"><img style="max-width: 800;" alt="" src="http://elephantationlabs.com/emailer/creo/emailer10/images/header.jpg" /></a></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table style="width: 100%;" border="0">
+<tbody>
+<tr class="header">
+<td style="width: 100%;"><a href="https://creoroom.com/clothing/men.html?universal_categories=225"><img style="max-width: 800;" alt="" src="http://elephantationlabs.com/emailer/creo/emailer10/images/image02.png" /> </a></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table style="width: 100%; background: #ffffff; margin-bottom: 3px;" border="0">
+<tbody>
+<tr class="header">
+<td style="width: 100%;"><a href="https://creoroom.com/clothing/women.html?universal_categories=225"><img style="max-width: 800;" alt="" src="http://elephantationlabs.com/emailer/creo/emailer10/images/image03.png" /> </a></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr style="width:100%;">
 <td class="three-column test">
   <?php if (is_array($products) && count($products)) { ?>
@@ -51,3 +86,29 @@ $productMediaConfig = Mage::getModel('catalog/product_media_config');
     <?php } ?>
   <?php } ?>
 </tr>
+
+<tr style="width: 100%;">
+<td class="three-column test" style="border-bottom: 6px solid #e1e1e1;"><!--[if (gte mso 9)|(IE)]>
+            <table width="100%">
+            <tr>
+            <td width="263px" valign="top">
+            <![endif]-->
+<table class="btn-newsletter" style="width: 33%; display: inline-block; vertical-align: top; text-align: center; padding-top: 20px;">
+<tbody>
+<tr>
+<td>
+<h2 class="h" style="border: 2px solid #e1e1e1; text-align: center; text-transform: uppercase; color: #000000; font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px; display: block;">talk to us</h2>
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list1" style="list-style: none; padding: 0;">
+<li style="margin-bottom: 10px;"><a style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; color: #000; text-decoration: none;" href="#"><img style="padding-right: 5px;" alt="" src="http://beta.creoroom.com/skin/frontend/creo/default/images/icon1.png" />+971 4 331 0717</a></li>
+<li style="margin-bottom: 10px;"><a style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; color: #000; text-decoration: none;" href="#"><img style="padding-right: 5px;" alt="" src="http://beta.creoroom.com/skin/frontend/creo/default/images/icon2.png" />talktous@creoroom.com</a></li>
+<li style="margin-bottom: 10px;"><a style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; color: #000; text-decoration: none;" href="#"><img style="padding-right: 5px;" alt="" src="http://beta.creoroom.com/skin/frontend/creo/default/images/icon3.png" />Saturday to Thursday</a></li>
+<li style="margin-bottom: 10px;"><a style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; color: #000; text-decoration: none;" href="#"><img style="padding-right: 5px;" alt="" src="http://beta.creoroom.com/skin/frontend/creo/default/images/icon4.png" />9:00am to 9:00pm</a></li>
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
