--- a/app/design/frontend/creo/default/template/recentproducts/recentproducts.phtml
+++ b/app/design/frontend/creo/default/template/recentproducts/recentproducts.phtml
@@ -6,6 +6,39 @@ $products = $this->getRecentProducts($cat_to_select,$pcount);
 //print_r($products);
 $productMediaConfig = Mage::getModel('catalog/product_media_config');
 
+
+function getCategoryPath($sku)
+    {
+        $product = Mage::getModel('catalog/product')->loadByAttribute('sku',$sku);
+        
+        $pathArray = array();
+        $collection1 = $product->getCategoryCollection()
+            ->setStoreId(Mage::app()->getStore()->getId())
+            ->addAttributeToSelect('path')
+            ->addAttributeToSelect('is_active');
+            
+
+        foreach($collection1 as $cat1){            
+            $pathIds = explode('/', $cat1->getPath());            
+            $collection = Mage::getModel('catalog/category')->getCollection()
+                ->setStoreId(Mage::app()->getStore()->getId())
+                ->addAttributeToSelect('name')
+                ->addAttributeToSelect('is_active')
+                ->addFieldToFilter('entity_id', array('in' => $pathIds));
+
+            $pahtByName = '';
+            foreach($collection as $cat){                
+                $pahtByName .= '/' . strtolower($cat->getName());
+            }
+            
+            $pathArray[] = $pahtByName;
+
+        }
+        
+        return $pathArray;
+    }
+
+
 ?>
 
 <table style="width: 800px; margin: 0 auto; border-spacing: 0;">
@@ -51,6 +84,13 @@ $productMediaConfig = Mage::getModel('catalog/product_media_config');
     foreach($products as $product) { 
             $thumbnailUrl  = $productMediaConfig->getMediaUrl($product['thumb']);
             $i++;
+            $arr = getCategoryPath($product['sku']);
+            $arr_temp = explode('/default category',$arr[1]);
+            //print_r($arr_temp);
+            //$str = ltrim('/',$arr_temp[1]);
+            
+            $purl = Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB).$arr_temp[1]."/".$product['urlpath'];
+            
         ?>
 
         
@@ -58,19 +98,23 @@ $productMediaConfig = Mage::getModel('catalog/product_media_config');
                                 <table class="btn-newsletter" cellpadding="0" cellspacing="0" border="0" style=" width: 33%; display: inline-block; vertical-align: top; ">
                                     <tr>
                                         <td>
-                                            <a href="<?php echo $product['url'] ?>" style="text-decoration:none;outline:none;"><img style="max-width:100%;width:100%;" src="<?php echo $thumbnailUrl;?>" width="261" height="303">
+                                            <a href="<?php echo $purl;?>" style="text-decoration:none;outline:none;display:block;width:100%;"><img style="max-width:100%;width:100%;" src="<?php echo $thumbnailUrl;?>" width="261" height="303">
+                                            <div style="display:inline-table; vertical-align:middle; width:100%;">
                                                 <h5 style='background-color: #000000;
                                                     color: #ffffff;
-                                                    font-family: "Roboto Condensed",sans-serif;
-                                                    font-size: 23px;
-                                                    font-weight: bold;
-                                                    margin-top: 0;
-                                                    padding-bottom: 5px;
-                                                    padding-top: 5px;
-                                                    text-align: center;
-                                                    text-decoration: none;
-                                                    text-transform: uppercase;
-                                                    width: 100%;'><?php echo $product['name'] ?></h5>
+    display:table-cell;
+    font-family: "Roboto Condensed",sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    height: 70px;
+    margin-top: 0;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    vertical-align: middle;
+    width: 100%;'><?php echo $product['name'] ?></h5>
+                                            </div>
                                             </a>
                                         </td>
                                     </tr>
